2006-04-02  David Bateman  <dbateman@free.fr>

	* general/tril.m, general.triu.m:
	Use resize (resize (x, 0), nr, nc) rather than zeros (nr, nc)
	to allow user types to work correctly.
	* special-matrix/hankel.m, special-matrix/toeplitz.m: Ditto.

2006-04-03  David Bateman  <dbateman@free.fr>

	* plot/grid.m: Cache the state of the grid to allow toggling.
	Accept keyword "minor" for minor grid.

2006-03-28  John W. Eaton  <jwe@octave.org>

	* general/isscalar.m: Only require that all dimensions are 1 for
	compatiblity.

2006-03-28  Bill Denney  <bill@givebillmoney.com>

	* general/isvector.m: Allow non-numeric objects to be vectors for
	compatibility.

2006-03-28  Keith Goodman  <kwgoodman@gmail.com>

	* plot/__errplot__.m: Doc string fix.

	* miscellaneous/doc.m: Mark as command.

	* general/isequal.m, general/__isequal__.m, general/cell2mat.m,
	general/isequalwithequalnans.m, general/blkdiag.m,
	strings/strfind.m, miscellaneous/doc.m: Update FSF address.
	
2006-03-27  Don Bindner  <dbindner@truman.edu>

	* plot/meshgrid.m: If nargout == 3 and vectors are supplied,
	return 3d matrices.

2006-03-27  Keith Goodman  <kwgoodman@gmail.com>

	* time/toc.m: Don't print "Elapsed time..." if tic has not been set.

2006-03-22  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Don't replot after popping terminal setting.

2006-03-20  John W. Eaton  <jwe@octave.org>

	* miscellaneous/mkoctfile.m: Use version-specific name of
	mkoctfile.  Use fullfile to construct file name.

2006-03-20  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/mkoctfile.m: Make it possible to call mkoctfile
	shell script from Octave prompt.

2006-03-17  John W. Eaton  <jwe@octave.org>

	* deprecated/weibcdf.m, deprecated/weibinv.m,
	deprecated/weibpdf.m, deprecated/weibrnd.m: New functions.

	* deprecated/weibull_cdf.m, deprecated/weibull_inv.m,
	deprecated/weibull_pdf.m, deprecated/weibull_rnd.m:
	Call new wbl functions to do the real work.