@@ -34,7 +34,7 @@ AC_CONFIG_FILES([Makefile audio/Makefile control/Makefile \
 	  control/util/Makefile deprecated/Makefile elfun/Makefile \
 	  finance/Makefile general/Makefile image/Makefile io/Makefile \
 	  linear-algebra/Makefile miscellaneous/Makefile \
-	  optimization/Makefile plot/Makefile \
+	  optimization/Makefile path/Makefile plot/Makefile \
 	  polynomial/Makefile quaternion/Makefile set/Makefile \
 	  signal/Makefile sparse/Makefile specfun/Makefile \
 	  special-matrix/Makefile startup/Makefile statistics/Makefile \
